--- a/02_code/android/eOrderMobile/res/layout/orderhestory_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/orderhestory_activity.xml
@@ -2,22 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffffff"
+    android:background="#ededed"    
     android:orientation="vertical" >
-
-    <RelativeLayout
-        android:id="@+id/title_bar"
-        android:layout_width="fill_parent"
+    
+    <RelativeLayout     
+        android:orientation="horizontal"       
+        android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="我的订单"
-            android:textColor="#FF000000"
-            android:textSize="24dp" />
-    </RelativeLayout>
-
+        android:id="@+id/layout_order_hestory">                      
+        <ListView               
+            android:id="@+id/order_hestory_listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" 
+            android:divider="#d9d9d9"
+            android:dividerHeight="1dp"
+            android:minHeight="36dp">      
+        </ListView>             
+    </RelativeLayout>   
 </RelativeLayout>
+    
