--- a/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
@@ -15,7 +15,16 @@
         android:numColumns="2"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
+        android:visibility="gone"
         android:stretchMode="columnWidth"/>
-        
+   		     		
+    <ProgressBar 
+        android:id="@+id/loading_data_progressbar"
+      	android:layout_width="wrap_content" 
+      	android:layout_height="wrap_content"
+      	android:visibility="gone"	
+      	android:layout_centerInParent="true"
+      	style="?android:attr/progressBarStyleLarge"/>
+		
 </RelativeLayout>
                 
